[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/inimigos/inimigo_melee_2.gd" type="Script" id=2]
[ext_resource path="res://animations/aviso_ataque_piscada.tres" type="Animation" id=3]
[ext_resource path="res://scripts/inimigos/hit_boxes/hit_box_inimigo.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 9.10088 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 32 )

[node name="inimigo_melee_2" type="RigidBody2D"]
collision_layer = 0
collision_mask = 4
mode = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -32 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Timer_avanco" type="Timer" parent="."]

[node name="Animation_Player" type="AnimationPlayer" parent="."]
anims/aviso_ataque_piscada = ExtResource( 3 )

[node name="warning" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -72 )
scale = Vector2( 0.1, 0.2 )
texture = ExtResource( 1 )

[node name="area_contato" type="Area2D" parent="."]
position = Vector2( 0, -32 )
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_contato"]
visible = false
shape = SubResource( 2 )

[node name="hit_box" type="Area2D" parent="."]
position = Vector2( 0, -32 )
collision_layer = 64
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
visible = false
shape = SubResource( 3 )
[connection signal="timeout" from="Timer_avanco" to="." method="_on_Timer_avanco_timeout"]
[connection signal="area_entered" from="area_contato" to="." method="_on_area_contato_area_entered"]
